samples/_failures_safe/1761157292_43a9b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96eec81a.c: In function ‘main’:
./samples/SAFE/__tmp_96eec81a.c:158:12: error: missing terminating " character
  158 |     printf("\nFinding shortest path from node
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_96eec81a.c:158:5: error: expected expression at end of input
  158 |     printf("\nFinding shortest path from node
      |     ^~~~~~
./samples/SAFE/__tmp_96eec81a.c:158:5: error: expected declaration or statement at end of input
